--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pyasn1==0.4.6
 pyasn1-modules==0.2.6
 pycparser==2.21
 pyparsing==3.0.9
+pyTelegramBotAPI==4.7.0
 python-dateutil==2.8.2
 pytz==2022.4
 PyYAML==6.0
