--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pycparser==2.21
 pyparsing==3.0.9
 pyTelegramBotAPI==4.7.0
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.4
 PyYAML==6.0
 requests==2.28.1
