--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,31 @@
-bigquery==0.0.32
-cachetools==3.1.1
+aiogram==2.22.2
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.9.1
+cachetools==5.2.0
 certifi==2022.9.24
-cffi==1.15.1
 charset-normalizer==2.1.1
-cryptography==38.0.1
-dacktool==0.0.7
-dbstream==0.1.16
+frozenlist==1.3.1
 google-api-core==2.10.2
 google-api-python-client==2.64.0
 google-auth==2.12.0
 google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.5.3
-google-cloud-bigquery==3.3.3
-google-cloud-bigquery-storage==2.16.1
-google-cloud-core==2.3.2
-google-cloud-secret-manager==2.7.2
-google-crc32c==1.5.0
-google-resumable-media==2.4.0
 googleapis-common-protos==1.56.4
-googleauthentication==0.0.16
-grpc-google-iam-v1==0.12.4
-grpcio==1.49.1
-grpcio-status==1.49.1
 httplib2==0.20.4
 idna==3.4
-libcst==0.4.7
-mypy-extensions==0.4.3
-numpy==1.23.3
+multidict==6.0.2
 oauth2client==4.1.3
-oauthlib==3.2.1
-packaging==21.3
-pandas==1.3.4
-proto-plus==1.22.1
 protobuf==4.21.7
-pyarrow==9.0.0
-pyasn1==0.4.6
-pyasn1-modules==0.2.6
-pycparser==2.21
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyparsing==3.0.9
-pyTelegramBotAPI==4.7.0
-python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.4
-PyYAML==6.0
 requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.0
-six==1.12.0
-typing-inspect==0.8.0
-typing_extensions==4.4.0
+rsa==4.9
+six==1.16.0
 uritemplate==4.1.1
 urllib3==1.26.12
+yarl==1.8.1
