--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==2.22.2
+aiogram==3.0.0b3
 aiohttp==3.8.3
 aiosignal==1.2.0
 async-timeout==4.0.2
@@ -20,12 +20,14 @@ oauth2client==4.1.3
 protobuf==4.21.7
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pydantic==1.10.2
 pyparsing==3.0.9
 python-dotenv==0.21.0
 pytz==2022.4
 requests==2.28.1
 rsa==4.9
 six==1.16.0
+typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.12
 yarl==1.8.1
